--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "crypto_lern",
   "version": "1.0.0",
-  "main": "index.js",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.4.1",
     "parcel": "^2.4.1"
   },
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
