--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --public-url https://chanxded.github.io/crypter/dist/"
   },
   "keywords": [],
   "author": "",
